# cookie-python-minimal

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
